--- a/src/aura/toast/toast.cmp
+++ b/src/aura/toast/toast.cmp
@@ -1,4 +1,5 @@
 <aura:component access="GLOBAL">
+	<!-- attributes -->
 	<aura:attribute access="GLOBAL" name="container" type="Boolean" default="true" />
 	<aura:attribute access="GLOBAL" name="closeButton" type="Boolean" default="false" />
 	<aura:attribute access="GLOBAL" name="closeButtonSize" type="String" default="large" />
@@ -7,9 +8,13 @@
 	<aura:attribute access="GLOBAL" name="key" type="String" />
 	<aura:attribute access="GLOBAL" name="title" type="String" />
 	<aura:attribute access="GLOBAL" name="message" type="String" />
+	<!-- /attributes -->
 
+	<!-- events -->
 	<aura:registerEvent access="GLOBAL" name="onclosebutton" type="c:genericComponentEvent" />
+	<!-- /events -->
 
+	<!-- component -->
 	<div class="{!if(v.container, 'slds-notify_container', '')}">
 		<div class="{!if(v.type eq 'other', ' slds-theme_info', ' slds-theme_' + v.type) + ' slds-notify slds-notify_toast'}" role="alert">
 			<aura:if isTrue="{!v.closeButton}">
@@ -41,4 +46,5 @@
 			</div>
 		</div>
 	</div>
+	<!-- /component -->
 </aura:component>
