When a modal is opened and it has a close button then set focus to the close button. This way, if the container doesn't handle the onopen event and set focus to an element within the modal at least it will move to the first element when the user pressed TAB.

--- a/src/aura/modal/modal.cmp
+++ b/src/aura/modal/modal.cmp
@@ -57,7 +57,8 @@
 				<!-- header -->
 				<div class="{!v.headerClass + ' slds-modal__header' + if(and(empty(v.title), empty(v.header)), ' slds-modal__header_empty', '')}">
 					<aura:if isTrue="{!v.closeButton}">
-						<lightning:buttonIcon class="slds-modal__close"
+						<lightning:buttonIcon aura:id="closeButton"
+						                      class="slds-modal__close"
 						                      iconName="utility:close"
 						                      alternativeText="Close"
 						                      variant="bare-inverse"
