Allow keyboard navigation in datepicker when the Previous Month, Next Month or Today buttons has focus.

--- a/src/aura/datepicker/datepicker.cmp
+++ b/src/aura/datepicker/datepicker.cmp
@@ -56,7 +56,7 @@
 				    aria-live="assertive">MONTH NAME</h2>
 
 				<div class="slds-align-middle"
-				     onkeydown="{!c.nullEventHandler}"
+				     onkeydown="{!c.nextMonthKeyDown}"
 				     onmousedown="{!c.nullEventHandler}">
 					<lightning:buttonIcon aura:id="nextMonth"
 					                      iconName="utility:right"
