Add autocomplete attribute to the input element in the inputNumber and inputDate components.

--- a/src/aura/inputDate/inputDate.cmp
+++ b/src/aura/inputDate/inputDate.cmp
@@ -45,6 +45,7 @@
 			       type="text"
 			       placeholder="{!v.placeholder}"
 			       tabindex="{!v.tabindex}"
+			       autocomplete="off"
 			       disabled="{!if(v.disabled, 'disabled', '')}"
 			       readonly="{!if(and(not(v.disabled), v.readonly), 'readonly', '')}"
 			       onfocus="{!c.inputFocus}"
@@ -89,6 +90,7 @@
 			       type="date"
 			       placeholder="{!v.placeholder}"
 			       tabindex="{!v.tabindex}"
+			       autocomplete="false"
 			       disabled="{!if(v.disabled, 'disabled', '')}"
 			       readonly="{!if(v.readonly, 'readonly', '')}"
 			       onfocus="{!c.inputFocus}"
