--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -4,6 +4,7 @@
 	<aura:attribute access="GLOBAL" name="name" type="String" />
 	<aura:attribute access="GLOBAL" name="class" type="String" />
 	<aura:attribute access="GLOBAL" name="value" type="Decimal" />
+	<aura:attribute access="GLOBAL" name="accesskey" type="String" />
 	<aura:attribute access="GLOBAL" name="placeholder" type="String" />
 	<aura:attribute access="GLOBAL" name="min" type="Decimal" />
 	<aura:attribute access="GLOBAL" name="max" type="Decimal" />
@@ -34,6 +35,7 @@
 	       name="{!v.name}"
 	       class="{!v.class + ' slds-input'}"
 	       type="{#if($Browser.formFactor eq 'DESKTOP', 'text', 'number')}"
+	       accesskey="{!v.accesskey}"
 	       placeholder="{!v.placeholder}"
 	       tabindex="{!v.tabindex}"
 	       autocomplete="off"
