--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -6,6 +6,7 @@
 	<aura:attribute access="GLOBAL" name="value" type="Decimal" />
 	<aura:attribute access="GLOBAL" name="accesskey" type="String" />
 	<aura:attribute access="GLOBAL" name="placeholder" type="String" />
+	<aura:attribute access="GLOBAL" name="title" type="String" />
 	<aura:attribute access="GLOBAL" name="min" type="Decimal" />
 	<aura:attribute access="GLOBAL" name="max" type="Decimal" />
 	<aura:attribute access="GLOBAL" name="step" type="Decimal" />
@@ -37,6 +38,7 @@
 	       type="{#if($Browser.formFactor eq 'DESKTOP', 'text', 'number')}"
 	       accesskey="{!v.accesskey}"
 	       placeholder="{!v.placeholder}"
+	       title="{!v.title}"
 	       tabindex="{!v.tabindex}"
 	       autocomplete="off"
 	       disabled="{!if(v.disabled, 'disabled', '')}"
