--- a/src/aura/inputText/inputText.cmp
+++ b/src/aura/inputText/inputText.cmp
@@ -6,6 +6,7 @@
 	<aura:attribute access="GLOBAL" name="value" type="String" />
 	<aura:attribute access="GLOBAL" name="accesskey" type="String" />
 	<aura:attribute access="GLOBAL" name="placeholder" type="String" />
+	<aura:attribute access="GLOBAL" name="title" type="String" />
 	<aura:attribute access="GLOBAL" name="maxlength" type="Integer" />
 	<aura:attribute access="GLOBAL" name="tabindex" type="Integer" />
 	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false" />
@@ -38,6 +39,7 @@
 	       type="text"
 	       accesskey="{!v.accesskey}"
 	       placeholder="{!v.placeholder}"
+	       title="{!v.title}"
 	       maxlength="{!v.maxlength}"
 	       tabindex="{!v.tabindex}"
 	       autocomplete="{!v.autocomplete}"
